# JCBTC-MK1

./: README.md
Master/: backlit.h  delay.h  i2c_master.h  lcd.h  master.c  rpi.h  rpistates.h  serial.h  servo.h  usart.h  wheels.h  xbee.h
Pi/: instructions.txt
Pi/imreduce/: CMakeLists.txt  main.cpp
Pi/programs/: CMakeLists.txt  SerialAPI.cpp  markone1.cpp  markone2.cpp  serialtest.cpp
Pi/testraspicam1/: CMakeLists.txt
Pi/testraspicam2/: CMakeLists.txt
Remote/: APIGUI.java  Map.java
Slave/: i2c_slave.h  networkjoin_coordinator.hex  networkjoin_router.hex  queue.h  slave.c  uart.h  ultrasonic.h  xbee.h
