cmake_minimum_required(VERSION 2.8)
project(test)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} /usr/local/lib/cmake/)
find_package(raspicam REQUIRED)
find_package(OpenCV REQUIRED)
#SET(raspicam_DIR /usr/local/lib/cmake)
#add_executable(alpha markone1.cpp)
add_executable(beta markone2.cpp)
target_link_libraries(beta ${OpenCV_LIBS} ${raspicam_CV_LIBS} -lwiringPi)
